Kuster_Ricardo/_infra/templates/networkpolicy-default-deny-ingress-probe-lab.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-probe-lab
  namespace: probe-lab
  labels:
    app.kubernetes.io/name: default-deny-ingress-probe-lab
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Kuster_Ricardo
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
